kubernetes/networking/nginx-1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx-1
  name: nginx-1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-1
  template:
    metadata:
      labels:
        app: nginx-1
    spec:
      containers:
      - name: nginx
        image: nginx
        volumeMounts:
        - name: index-volume
          mountPath: /usr/share/nginx/html
      volumes:
      - name: index-volume
        configMap:
          name: nginx-1-index

---
# kubectl run curl --image=curlimages/curl -it --rm -- sh
# curl nginx-1:8080
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx-1
  name: nginx-1
spec:
  selector:
    app: nginx-1
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 80

---
# type=LoadBalancer のため、"AWS Load Balancer Controller" が必要
# curl $(kubectl get svc nginx-1-nlb -o=jsonpath='{.status.loadBalancer.ingress[0].hostname}'):8080
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx-1
  name: nginx-1-nlb
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: external
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
spec:
  selector:
    app: nginx-1
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 80
