kubernetes/networking/nginx-2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx-2
  name: nginx-2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-2
  template:
    metadata:
      labels:
        app: nginx-2
    spec:
      containers:
      - name: nginx
        image: nginx
        volumeMounts:
        - name: index-volume
          mountPath: /usr/share/nginx/html
      volumes:
      - name: index-volume
        configMap:
          name: nginx-2-index

---
# kubectl run curl --image=curlimages/curl -it --rm -- sh
# curl nginx-2:8080
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx-2
  name: nginx-2
spec:
  selector:
    app: nginx-2
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 80
